--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,10 +17,7 @@ maintainers = [
 requires-python = ">=3.11"
 
 
-dependencies = [
-    # 'freecad-stubs>=1.0.21' ,
-    # 'pyside6>=6.9.2'
-]
+dependencies = []
 
 [dependency-groups]
 dev = [
