chore: add addon-ready utility to verify Addon readiness

--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -91,6 +91,7 @@ tasks:
     deps:
       - env:clean:bytecodes
     cmds:
+      - task: env:addon-ready
       - task: lint:fix:emoji
       - task: format
       - task: lint
