--- a/package.xml
+++ b/package.xml
@@ -20,7 +20,7 @@
     <!--[ Info ]―――――――――――――――――――――――――――――――――――――――――――――――――――――――――――――-->
 
     <description>A FreeCAD workbench for managing varsets and aliases.</description>
-    <name>Minimal</name>
+    <name>DataManager</name>
 
     <!--[ Tags ]―――――――――――――――――――――――――――――――――――――――――――――――――――――――――――――-->
 
@@ -47,7 +47,7 @@
     >LGPL-3.0-or-later</license>
 
     <license
-        file = 'LICENSE-ICON'
+        file = 'LICENSE-DOCS-AND-ICON'
     >CC-BY-SA-4.0</license>
 
     <!--[ Icon ]―――――――――――――――――――――――――――――――――――――――――――――――――――――――――――――-->
