--- a/pyproject.toml
+++ b/pyproject.toml
@@ -49,10 +49,10 @@ dev = [
 ]
 
 [tool.hatch.build.targets.wheel]
-packages = ["freecad/datamanager_wb"]
+packages = ["freecad/DataManager"]
 
 [tool.hatch.build.targets.wheel.force-include]
-"freecad/datamanager_wb/resources" = "freecad/datamanager_wb/resources"
+"freecad/DataManager/resources" = "freecad/DataManager/resources"
 
 [project.urls]
 Homepage = "https://github.com/royw/freecad_datamanager_workbench"
@@ -79,9 +79,9 @@ warn_unreachable = true
 strict_equality = true
 # FreeCAD GUI entrypoints depend on runtime FreeCAD/Qt types; exclude from strict mypy.
 exclude = [
-    '^freecad/datamanager_wb/init_gui\.py$',
-    '^freecad/datamanager_wb/ui/.*\.py$',
-    '^freecad/datamanager_wb/entrypoints/.*\.py$',
+    '^freecad/DataManager/init_gui\.py$',
+    '^freecad/DataManager/ui/.*\.py$',
+    '^freecad/DataManager/entrypoints/.*\.py$',
     '^scripts/.*$',
 ]
 # Allow multiple conftest.py files in different test directories
@@ -113,9 +113,9 @@ ignore_missing_imports = true
 
 [[tool.mypy.overrides]]
 module = [
-    "freecad.datamanager_wb.init_gui",
-    "freecad.datamanager_wb.ui.*",
-    "freecad.datamanager_wb.entrypoints.*",
+    "freecad.DataManager.init_gui",
+    "freecad.DataManager.ui.*",
+    "freecad.DataManager.entrypoints.*",
 ]
 ignore_errors = true
 
@@ -284,7 +284,7 @@ max-complexity = 10
 
 [tool.ruff.lint.isort]
 # Configure ruff's built-in isort to match project preferences
-known-first-party = ["datamanager_wb"]
+known-first-party = ["DataManager"]
 section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]
 lines-after-imports = 2
 force-single-line = false
@@ -378,6 +378,6 @@ test-type = [
     "integration",
     "e2e"
 ]
-package = "datamanager_wb"  # Optional: auto-detected from freecad/ directory or project name
+package = "DataManager"  # Optional: auto-detected from freecad/ directory or project name
 # Optional: files to exclude from untested report
 excluded-files = ["__init__.py", "__main__.py", "_version.py"]
